--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <li><a href="./pages/catalogo.html">Catalogo</a></li>
                     <li><a href="./pages/trabajaconnosotros.html">Trabaja con nosotros</a></li>
                     <li><a href="./pages/ubicacion.html">Ubicación</a></li>
-                    <li><a href="./pages/acceder.html">Acceder</a></li>
+                    <li><a href="./pages/acceder.html">Accedeer</a></li>
                 </ul>
         </nav>
     </header>
