Responsive de ubicacion.html

--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -14,27 +14,96 @@
         <link rel="stylesheet" href="../css/style.css">
     </head>
 <body>
-    <header>
-        <nav>
-            <div class="contenedor-logos">
-                <a href="#"><img class="logo" src="./img/android-chrome-192x192.png" alt=""></a>
-            <h1 class="sc">Smart City</h1>
-            </div>
-            
-                <ul>
-                    <li><a href="./index.html">Inicio</a></li>
-                    <li><a href="./pages/catalogo.html">Catalogo</a></li>
-                    <li><a href="./pages/trabajaconnosotros.html">Trabaja con nosotros</a></li>
-                    <li><a href="./pages/ubicacion.html">Ubicación</a></li>
-                    <li><a href="./pages/acceder.html">Acceder</a></li>
-                </ul>
+    <header class="header">
+        <nav class="navbar">
+            <h1 class="logo">Smart City</h1>
+            <label class="labe_hamburguesa" for="menu_hamburguesa">
+                <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="35"
+                    height="35"
+                    fill="currentColor"
+                    class="list_icon"
+                    viewBox="0 0 16 16"
+                >
+                    <path
+                        fill-rule="evenodd"
+                        d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"
+                    />
+                </svg>
+            </label>
+            <input class="menu_hamburguesa" type="checkbox" name="" id="menu_hamburguesa">
+            <ul class="ul_links">
+                <li class="li_links">
+                    <a href="../index.html" class="link">Inicio</a>
+                </li>
+                <li class="li_links">
+                    <a href="./pages/ubicacion.html" class="link">Ubicación</a>
+                </li>
+                <li class="li_links">
+                    <a href="./pages/ofertas.html" class="link">Oferta</a>
+                </li>
+                <l1 class="li_links">
+                    <a href="./pages/catalogo.html" class="link">Catalogo</a>
+                </l1>
+                <l1 class="li_links">
+                    <a href="./pages/trabajaconnosotros.html" class="link">Trabaja con nosotros</a>
+                </l1>
+            </ul>
         </nav>
     </header>
     <main>
-
+        <section class="h2yp">
+            <h2 class="sucursales-tittle">
+                Nuestras sucursales
+            </h2>
+            <p class="sucursales-p">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate tempore enim cumque molestiae maiores doloribus magnam nulla amet, reiciendis eius!
+            </p>
+        </section>
+        <section class="sucursales-ubi">
+            <h4 class="sucurnum">
+                Sucursal 1
+            </h4>
+            <div class="grid-item">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d38515.76358562118!2d-64.18816862435321!3d-31.432176007250746!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9432987868a94039%3A0xbce488adf17a3cd5!2sFravega!5e0!3m2!1ses-419!2sar!4v1711986314004!5m2!1ses-419!2sar" width="400" height="350" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </section>
+        <section class="sucursales-ubi">
+            <h4 class="sucurnum">
+                Sucursal 2
+            </h4>
+            <div class="grid-item">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d38533.543366554324!2d-64.27228699048521!3d-31.388873352270025!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x943298c955bc018d%3A0x5f2387b96b89c457!2sFr%C3%A1vega%20C%C3%B3rdoba%20Norte!5e0!3m2!1ses-419!2sar!4v1711986377759!5m2!1ses-419!2sar" width="400" height="350" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </section>
+        <section class="sucursales-ubi">
+            <h4 class="sucurnum">
+                Sucursal 3
+            </h4>
+            <div class="grid-item">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d436074.3188719208!2d-64.59142410237233!3d-31.36365308733251!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x942d6641452de511%3A0x576cf25070108170!2zRnLDoXZlZ2E!5e0!3m2!1ses-419!2sar!4v1711986401087!5m2!1ses-419!2sar" width="400" height="350" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </section>
+        <section class="sucursales-ubi">
+            <h4 class="sucurnum">
+                Sucursal 4
+            </h4>
+            <div class="grid-item">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d16198.82805891224!2d-64.20477365771488!3d-31.403541555760572!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9432987868a94039%3A0xf8efc6c658877287!2zRnLDoXZlZ2E!5e0!3m2!1ses-419!2sar!4v1711986481557!5m2!1ses-419!2sar" width="400" height="350" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </section>
     </main>
     <footer>
-
+        <section class="p-container">
+            <p>Todos los derechos reservados</p>
+        </section>
+        
+        <div class="redes">
+            <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.facebook.com/home.php"><i class="fa-brands fa-facebook"></i></a>
+            <a href="https://twitter.com/?lang=es"><i class="fa-brands fa-x-twitter"></i></a>
+        </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
