Agregado de contenido para el apartado de "contaco.html" sumado a sus respectivos estilos y aplicados a vista mobile

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <a href="./pages/catalogo.html" class="link">Catalogo</a>
                 </l1>
                 <l1 class="li_links">
-                    <a href="./pages/trabajaconnosotros.html" class="link">Trabaja con nosotros</a>
+                    <a href="./pages/contacto.html" class="link">Contactanos</a>
                 </l1>
             </ul>
         </nav>
