--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Smart City</title>
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -35,19 +35,19 @@
             <input class="menu_hamburguesa" type="checkbox" name="" id="menu_hamburguesa">
             <ul class="ul_links">
                 <li class="li_links">
-                    <a href="./index.html" class="link">Inicio</a>
+                    <a href="../index.html" class="link">Inicio</a>
                 </li>
                 <li class="li_links">
-                    <a href="./pages/ubicacion.html" class="link">Ubicación</a>
+                    <a href="../pages/ubicacion.html" class="link">Ubicación</a>
                 </li>
                 <li class="li_links">
-                    <a href="./pages/ofertas.html" class="link">Oferta</a>
+                    <a href="../pages/ofertas.html" class="link">Oferta</a>
                 </li>
                 <l1 class="li_links">
-                    <a href="./pages/catalogo.html" class="link">Catalogo</a>
+                    <a href="../pages/catalogo.html" class="link">Catalogo</a>
                 </l1>
                 <l1 class="li_links">
-                    <a href="./pages/trabajaconnosotros.html" class="link">Trabaja con nosotros</a>
+                    <a href="../pages/contacto.html" class="link">Contactanos</a>
                 </l1>
             </ul>
         </nav>
@@ -133,16 +133,17 @@
             </div>
         </section>
     </main>
-    <section class="p-container">
-        <p>Todos los derechos reservados</p>
-    </section>
-    
-    <div class="redes">
-        <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
-        <a href="https://www.facebook.com/home.php"><i class="fa-brands fa-facebook"></i></a>
-        <a href="https://twitter.com/?lang=es"><i class="fa-brands fa-x-twitter"></i></a>
-    </div>
-</footer>
+    <footer>
+        <section class="p-container">
+            <p>Todos los derechos reservados</p>
+        </section>
+        
+        <div class="redes">
+            <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.facebook.com/home.php"><i class="fa-brands fa-facebook"></i></a>
+            <a href="https://twitter.com/?lang=es"><i class="fa-brands fa-x-twitter"></i></a>
+        </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
