--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -38,16 +38,16 @@
                     <a href="../index.html" class="link">Inicio</a>
                 </li>
                 <li class="li_links">
-                    <a href="./pages/ubicacion.html" class="link">Ubicación</a>
+                    <a href="../pages/ubicacion.html" class="link">Ubicación</a>
                 </li>
                 <li class="li_links">
-                    <a href="./pages/ofertas.html" class="link">Oferta</a>
+                    <a href="../pages/ofertas.html" class="link">Oferta</a>
                 </li>
                 <l1 class="li_links">
-                    <a href="./pages/catalogo.html" class="link">Catalogo</a>
+                    <a href="../pages/catalogo.html" class="link">Catalogo</a>
                 </l1>
                 <l1 class="li_links">
-                    <a href="./pages/trabajaconnosotros.html" class="link">Trabaja con nosotros</a>
+                    <a href="../pages/contacto.html" class="link">Contactanos</a>
                 </l1>
             </ul>
         </nav>
