Aplicacion de sass al proyecto

--- a/pages/ofertas.html
+++ b/pages/ofertas.html
@@ -53,33 +53,33 @@
         </nav>
     </header>
     <main class="main-ofertas">
-      <div class="ofertas-container">
+        <div class="ofertas-container">
         <img src="../img/camseguridad-removebg-preview.png" alt="Camara de seguridad" width="300">
         <p>Camara de seguridad de alta definicion con memoria extraible</p>
         <button class="buy-button">Comprar</button>
         <div class="ofertas-container">
-          <img src="../img/hyperxclou_flight-removebg-preview.png" alt="Auriculares hyperx" width="300">
-          <p>Auriculares gamer con sonido 7.1</p>
-          <button class="buy-button">Comprar</button>
-          <div class="ofertas-container">
+            <img src="../img/hyperxclou_flight-removebg-preview.png" alt="Auriculares hyperx" width="300">
+            <p>Auriculares gamer con sonido 7.1</p>
+            <button class="buy-button">Comprar</button>
+            <div class="ofertas-container">
             <img src="../img/oculus_rif-removebg-preview.png" alt="Oculus rif" width="300">
             <p>Lentes de realidad virtual</p>
             <button class="buy-button">Comprar</button>
             <div class="ofertas-container">
-              <img src="../img/images-removebg-preview.png" alt="Gabinete gamer" width="300">
-              <p>Gabinete gamer con rgb</p>
-              <button class="buy-button">Comprar</button>
+                <img src="../img/images-removebg-preview.png" alt="Gabinete gamer" width="300">
+                <p>Gabinete gamer con rgb</p>
+                <button class="buy-button">Comprar</button>
     </main>
     <footer>
-      <section class="p-container">
-          <p>Todos los derechos reservados</p>
-      </section>
-      
-      <div class="redes">
-          <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
-          <a href="https://www.facebook.com/home.php"><i class="fa-brands fa-facebook"></i></a>
-          <a href="https://twitter.com/?lang=es"><i class="fa-brands fa-x-twitter"></i></a>
-      </div>
-  </footer>
+        <section class="p-container">
+            <p>Todos los derechos reservados</p>
+        </section>
+        <div class="redes">
+            <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.facebook.com/home.php"><i class="fa-brands fa-facebook"></i></a>
+            <a href="https://twitter.com/?lang=es"><i class="fa-brands fa-x-twitter"></i></a>
+        </div>
+</footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
