--- a/index.html
+++ b/index.html
@@ -53,53 +53,14 @@
         </nav>
     </header>
     <main>
-        <!-- Aquí se aplicara un carrusel cuando el tema sea abordado en clases -->
-        <h2 class="eslogan">
-            Hacemos tu vida mas simple
-        </h2>
-        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        <div class="card text-bg-dark">
+            <img src="./img/familia-jugando.jpeg" class="card-img" alt="...">
+            <div class="card-img-overlay">
+                <h5 class="card-title">Compati los mejores momentos</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <p class="card-text"><small>Last updated 3 mins ago</small></p>
             </div>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img class=" c-img" src="./img/notebookjpg-transformed.png" alt="Notebook 'AS520 ULTRA">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Notebook 'AS520 ULTRA</h5>
-                        <p>8gb RAM - Intel core I5 - 240gb ssd.</p>
-                    </div>
-                </div>
-                <div class="carousel-item c-item">
-                    <img class=" c-img" src="./img/celularimage-transformed.png" alt="Second slide">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Second slide label</h5>
-                        <p>Some representative placeholder content for the second slide.</p>
-                    </div>
-                </div>
-                <div class="carousel-item c-item">
-                    <img class=" c-img" src="./img/tablet.jpg" alt="Third slide">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Third slide label</h5>
-                        <p>Some representative placeholder content for the third slide.</p>
-                    </div>
-                </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
         </div>
-        
-        <p>
-            Puedes explorar mas a detalle todo sobre nuestro catalogo haciendo click aquí
-        </p>
-        <a class="boton-catalogo" href="./pages/catalogo.html">Catalogo</a>
     </main>
     <footer>
         <section class="p-container">
