Agregado de contenido al archivo contacto.html

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -6,11 +6,11 @@
     <title>Smart City</title>
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <link rel="shortcut icon" href="./img/chip.logo.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/eb496abla0.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
@@ -52,27 +52,28 @@
             </ul>
         </nav>
     </header>
-    <main>
-        <sectio class="form-sect">
-            <div class="info-form">
-                <h3>
-                    Contactanos
-                </h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt at, magni aspernatur consequatur, eos dolorem quas commodi libero quaerat soluta ut consequuntur tenetur neque unde repellendus nam qui quidem nobis!</p>
-                <a href="#"> <i class="fa fa-phone">
-                </i>123-456-789</a>
-                <a href="#"><i class="fa fa-envelope">Lorem, ipsum dolor.@gmail.com</i></a>
-                <a href="#"><i class="fa fa-map-marked">Cordoba, Argentina</i></a>
+        <main>
+            <div class="container-form">
+                <div class="info-form">
+                    <h3>Contáctenos</h3>
+                    <p>Si tienes alguna consulta con respecto a nuestros productos o servicios no dudes en contactarnos mediante este formulario que te dejamos aquí abajo!</p>
+                    <a href="#"><i class="fa fa-phone">123-456-789</i>
+                    </a>
+                    <a href="#"><i class="fa fa-envelope">lorem@gmail.com</i>
+                    </a>
+                    <a href="#"><i class="fa fa-map-marked">Ciudad, Pais</i></a>
+                </div>
+                <form action="#" autocomplete="off">
+                    <input type="text" name="nombre" placeholder="Ingresa tu nombre" class="campo">
+                    <input type="email" name="email" placeholder="Ingresa tu correo" class="campo">
+                    <textarea name="mensaje" placeholder="Ingresa tu mensaje"></textarea>
+                    <input type="submit" name="enviar" value="enviar mensaje" class="btn-enviar">
+                </form>
+                <div class="img-h3">
+                    <img class="img-contacto" src="../img/undraw_ask_me_anything_re_x7pm.svg" alt="Imagen ilustrativa ">
+                </div>
             </div>
-            <form action="#" autocomplete="off">
-                <input type="text" name="Ingresa tu nombre" class="campo">
-                <input type="email" name="email" placeholder="Ingresa tu correo" class="campo">
-                <textarea name="mensaje">
-                </textarea>
-                <input type="submit" name="enviar" value="enviar mensaje" class="btn-enviar">
-            </form>
-        </sectio>
-    </main>
+        </main>
     <footer>
         <section class="p-container">
             <p>Todos los derechos reservados</p>
@@ -84,6 +85,5 @@
             <a href="https://twitter.com/?lang=es"><i class="fa-brands fa-x-twitter"></i></a>
         </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
