--- a/index.html
+++ b/index.html
@@ -14,53 +14,47 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <header class="header">
-        <nav class="navbar">
-            <h1 class="logo">Smart City</h1>
-            <label class="labe_hamburguesa" for="menu_hamburguesa">
-                <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="35"
-                    height="35"
-                    fill="currentColor"
-                    class="list_icon"
-                    viewBox="0 0 16 16"
-                >
-                    <path
-                        fill-rule="evenodd"
-                        d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"
-                    />
-                </svg>
-            </label>
-            <input class="menu_hamburguesa" type="checkbox" name="" id="menu_hamburguesa">
-            <ul class="ul_links">
-                <li class="li_links">
-                    <a href="./index.html" class="link">Inicio</a>
-                </li>
-                <li class="li_links">
-                    <a href="./pages/ubicacion.html" class="link">Ubicación</a>
-                </li>
-                <li class="li_links">
-                    <a href="./pages/ofertas.html" class="link">Oferta</a>
-                </li>
-                <l1 class="li_links">
-                    <a href="./pages/catalogo.html" class="link">Catalogo</a>
-                </l1>
-                <l1 class="li_links">
-                    <a href="./pages/contacto.html" class="link">Contactanos</a>
-                </l1>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <div class="card text-bg-dark">
-            <img src="./img/familia-jugando.jpeg" class="card-img" alt="...">
-            <div class="card-img-overlay">
-                <h5 class="card-title">Compati los mejores momentos</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                <p class="card-text"><small>Last updated 3 mins ago</small></p>
+    <header>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">Smart City</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./pages/ubicacion.html">Ubicación</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./pages/contacto.html">Contacto</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./pages/catalogo.html">Catalogo</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../pages/ofertas.html">Ofertas</a>
+                      </li>
+                </ul>
+              </div>
             </div>
+          </nav>
+    </header>
+    
+    <main class="main-index">
+        <h2 class="somos-smartcity">
+            Somos smart city!
+        </h2>
+        <div class="h2yp">
+            <p class="p-smartcity">
+                En Smart City vas a poder encontrar todos tus dispositivos necesarios para hacer tu vida mas facil. <br> Puedes saber mas entrando en nuestra seccion de <a href="./pages/catalogo.html">Catalogo</a>
+            </p>
         </div>
+        <section>
+            img
+        </section>
     </main>
     <footer>
         <section class="p-container">
