--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -1,89 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Smart City</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <link rel="shortcut icon" href="./img/chip.logo.png" type="image/x-icon">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <script src="https://kit.fontawesome.com/eb496abla0.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Smart City</title>
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="shortcut icon" href="./img/chip.logo.png" type="image/x-icon">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <script src="https://kit.fontawesome.com/eb496abla0.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="../css/style.css">
 </head>
+
 <body>
-    <header class="header">
-        <nav class="navbar">
-            <h1 class="logo">Smart City</h1>
-            <label class="labe_hamburguesa" for="menu_hamburguesa">
-                <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="35"
-                    height="35"
-                    fill="currentColor"
-                    class="list_icon"
-                    viewBox="0 0 16 16"
-                >
-                    <path
-                        fill-rule="evenodd"
-                        d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"
-                    />
-                </svg>
-            </label>
-            <input class="menu_hamburguesa" type="checkbox" name="" id="menu_hamburguesa">
-            <ul class="ul_links">
-                <li class="li_links">
-                    <a href="../index.html" class="link">Inicio</a>
-                </li>
-                <li class="li_links">
-                    <a href="../pages/ubicacion.html" class="link">Ubicación</a>
-                </li>
-                <li class="li_links">
-                    <a href="../pages/ofertas.html" class="link">Oferta</a>
-                </li>
-                <l1 class="li_links">
-                    <a href="../pages/catalogo.html" class="link">Catalogo</a>
-                </l1>
-                <l1 class="li_links">
-                    <a href="../pages/contacto.html" class="link">Contactanos</a>
-                </l1>
-            </ul>
-        </nav>
-    </header>
-        <main>
-            <div class="container-form">
-                <div class="info-form">
-                    <h3>Contáctenos</h3>
-                    <p>Si tienes alguna consulta con respecto a nuestros productos o servicios no dudes en contactarnos mediante este formulario que te dejamos aquí abajo!</p>
-                    <a href="#"><i class="fa fa-phone">123-456-789</i>
-                    </a>
-                    <a href="#"><i class="fa fa-envelope">lorem@gmail.com</i>
-                    </a>
-                    <a href="#"><i class="fa fa-map-marked">Ciudad, Pais</i></a>
-                </div>
-                <form action="#" autocomplete="off">
-                    <input type="text" name="nombre" placeholder="Ingresa tu nombre" class="campo">
-                    <input type="email" name="email" placeholder="Ingresa tu correo" class="campo">
-                    <textarea name="mensaje" placeholder="Ingresa tu mensaje"></textarea>
-                    <input type="submit" name="enviar" value="enviar mensaje" class="btn-enviar">
-                </form>
-                <div class="img-h3">
-                    <img class="img-contacto" src="../img/undraw_ask_me_anything_re_x7pm.svg" alt="Imagen ilustrativa ">
-                </div>
-            </div>
-        </main>
-    <footer>
-        <section class="p-container">
-            <p>Todos los derechos reservados</p>
-        </section>
-        
-        <div class="redes">
-            <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
-            <a href="https://www.facebook.com/home.php"><i class="fa-brands fa-facebook"></i></a>
-            <a href="https://twitter.com/?lang=es"><i class="fa-brands fa-x-twitter"></i></a>
+  <header>
+    <nav class="navbar position-fixedtop navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="../index.html">Smart City</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../pages/ubicacion.html">Ubicación</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../pages/contacto.html">Contacto</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../pages/catalogo.html">Catalogo</a>
+            <li class="nav-item">
+              <a class="nav-link" href="../pages/ofertas.html">Ofertas</a>
+            </li>
+          </ul>
         </div>
-    </footer>
+      </div>
+    </nav>
+  </header>
+  <main>
+    <div class="container-form">
+      <div class="info-form">
+        <h3 class="tituloyp">Contáctenos</h3>
+        <p class="tituloyp">Si tienes alguna consulta con respecto a nuestros productos o servicios no dudes en contactarnos mediante
+          este formulario que te dejamos aquí abajo!</p>
+        <a href="#"><i class="fa fa-phone">123-456-789</i>
+        </a>
+        <a href="#"><i class="fa fa-envelope">lorem@gmail.com</i>
+        </a>
+        <a href="#"><i class="fa fa-map-marked">Ciudad, Pais</i></a>
+      </div>
+      <form action="#" autocomplete="off">
+        <input type="text" name="nombre" placeholder="Ingresa tu nombre" class="campo">
+        <input type="email" name="email" placeholder="Ingresa tu correo" class="campo">
+        <textarea name="mensaje" placeholder="Ingresa tu mensaje"></textarea>
+        <input type="submit" name="enviar" value="enviar mensaje" class="btn-enviar">
+      </form>
+      <div class="img-h3">
+        <img class="img-contacto" src="../img/undraw_ask_me_anything_re_x7pm.svg" alt="Imagen ilustrativa ">
+      </div>
+    </div>
+  </main>
+  <footer>
+    <section class="p-container">
+      <p>Todos los derechos reservados</p>
+    </section>
+
+    <div class="redes">
+      <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
+      <a href="https://www.facebook.com/home.php"><i class="fa-brands fa-facebook"></i></a>
+      <a href="https://twitter.com/?lang=es"><i class="fa-brands fa-x-twitter"></i></a>
+    </div>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
